--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Unicare - NGO</title>
+	<title>NGO - NGO Near Me</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -39,50 +39,28 @@
 </head>
 <body>
 
-	<section class="row align-items-center py-1 px-xl-2" >
-     <div class="col-lg-3">
-       <a href="index.html" class="text-decoration-none">
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj1xnj8yHmS38UMOIhorLjeQjF2cX4tvndF7DHJH7pWscuE3dlA8xY1Tbk1ox2PoyZDOmkCwERtcuPtf0GeSn9j22Fye9cckelpP8-i7G4N909YRDXP4auyH5HQ7fgCkSfUtcdDzTRMMynjYDjA5Pqo18kpLRLySoFCxQYFZPCbDK0a_9HKRlp1I0E3XfvG/s1600/Capture-removebg-preview%20(1).png" alt="Logo" style="max-height: 40px; background-color: #f0f0f0; border: 1px solid #ccc;">
-</a>
-
-    </div>
-<div class="row">
-    <div class="d-flex justify-content-between align-items-center">
-    <a class="navbar-brand" href="index.html" style="text-decoration: none; color: inherit;">
-        <span class="badge rounded-pill bg-primary">Accupressure</span>
-        <span class="badge rounded-pill bg-secondary">Service</span>
-    </a>
-
-    <a href="https://www.google.com/maps?q=123+Street,+New+York,+USA" target="_blank" style="text-decoration: none; color: inherit;">
-        <div class="d-inline-flex align-items-center">
-            <i class="fas fa-location-dot"></i>
-            <div class="text-left ml-2">
-                <span class="badge bg-secondary">123 Street, Delhi</span>
-            </div>
-        </div>
-    </a>
-</div>
-</div>
-<div class="row">
-    <div class="d-flex justify-content-between align-items-center">
-    <a href="mailto:service@water.com" style="text-decoration: none; color: inherit;">
-        <div class="d-inline-flex align-items-center">
-            <i class="fa fa-2x fa-envelope text-primary mr-3"></i>
-            <div class="text-left">
-                <span class="badge bg-danger">service@accupressure.com</span>
-            </div>
-        </div>
-    </a>
-
-    <div class="d-inline-flex align-items-center">
-        <i class="fa fa-2x fa-phone text-primary mr-3"></i>
-        <div class="text-left">
-            <span class="badge bg-success">+91 34578 67895</span>
-        </div>
-    </div>
-</div>
-</div>
-</section>
+	<div class="wrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 d-flex align-items-center">
+					<p class="mb-0 phone pl-md-2">
+						<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +91 12345 56789</a> 
+						<a href="#"><span class="fa fa-paper-plane mr-1"></span> help@ngo.com</a>
+					</p>
+				</div>
+				<div class="col-md-6 d-flex justify-content-md-end">
+					<div class="social-media">
+						<p class="mb-0 d-flex">
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
   <div class="container">
@@ -96,7 +74,11 @@
         <li class="nav-item active"><a href="#home" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="#volunteer" class="nav-link">Volunteer</a></li>
-        <li class="nav-item"><a href="#causes" class="nav-link">Causes</a></li>
+        <li class="nav-item"><a href="#causes" class="nav-link">Why</a></li>
+        <li class="nav-item"><a href="#gallery" class="nav-link">Gallery</a></li>
+        <li class="nav-item"><a href="#review" class="nav-link">Review</a></li>
+        <li class="nav-item"><a href="#faq" class="nav-link">Faq</a></li>
+          <li class="nav-item"><a href="#video" class="nav-link">Video</a></li>
         <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
         <li class="nav-item cta"><a href="#donate" class="nav-link">Donate</a></li>
       </ul>
@@ -427,8 +409,8 @@
 		<div class="container">
 			<div class="row justify-content-center pb-5 mb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
-					<span class="subheading">Our Causes</span>
-					<h2>Donate to charity causes around the world</h2>
+					<span class="subheading">Why Donate</span>
+					<h2>Reason</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -720,82 +702,65 @@
 		</div>
 	</section>
 
-	<section class="ftco-section">
-		<div class="container">
-			<div class="row justify-content-center pb-5 mb-3">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<span class="subheading">Our Blog</span>
-					<h2>Latest news from our blog</h2>
-				</div>
-			</div>
-			<div class="row d-flex">
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="blog-entry align-self-stretch">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-						</a>
-						<div class="text p-4">
-							<div class="meta mb-2">
-								<div><a href="#">July 20, 2020</a></div>
-								<div><a href="#">Admin</a></div>
-								<div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-							</div>
-							<h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-							<p><a href="#" class="btn btn-secondary">Read more</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="blog-entry align-self-stretch">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-						</a>
-						<div class="text p-4">
-							<div class="meta mb-2">
-								<div><a href="#">July 20, 2020</a></div>
-								<div><a href="#">Admin</a></div>
-								<div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-							</div>
-							<h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-							<p><a href="#" class="btn btn-secondary">Read more</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="blog-entry align-self-stretch">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-						</a>
-						<div class="text p-4">
-							<div class="meta mb-2">
-								<div><a href="#">July 20, 2020</a></div>
-								<div><a href="#">Admin</a></div>
-								<div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-							</div>
-							<h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-							<p><a href="#" class="btn btn-secondary">Read more</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="blog-entry align-self-stretch">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">
-						</a>
-						<div class="text p-4">
-							<div class="meta mb-2">
-								<div><a href="#">July 20, 2020</a></div>
-								<div><a href="#">Admin</a></div>
-								<div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-							</div>
-							<h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-							<p><a href="#" class="btn btn-secondary">Read more</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	<div style="max-width: 600px; margin: 20px auto; border: 2px solid #28a745; border-radius: 8px; overflow: hidden;">
+  <!-- Community Support -->
+  <div style="border-bottom: 1px solid #28a745;">
+    <button data-ui-tablist-tab style="width: 100%; padding: 15px; background-color: #d4edda; border: none; text-align: left; font-size: 18px; font-weight: bold; color: #155724; cursor: pointer;">🤝 Community Support</button>
+    <div data-ui-tablist-tabpanel style="padding: 15px; display: block;">
+      <div style="font-size: 16px; color: #155724;">
+        We work closely with communities to provide support through skill-building workshops, resource sharing, and empowerment programs.
+      </div>
+    </div>
+  </div>
+
+  <!-- Healthcare Initiatives -->
+  <div style="border-bottom: 1px solid #28a745;">
+    <button data-ui-tablist-tab style="width: 100%; padding: 15px; background-color: #d4edda; border: none; text-align: left; font-size: 18px; font-weight: bold; color: #155724; cursor: pointer;">🏥 Healthcare Initiatives</button>
+    <div data-ui-tablist-tabpanel style="padding: 15px; display: none;">
+      <div style="font-size: 16px; color: #155724;">
+        Our healthcare programs focus on providing free medical checkups, vaccination drives, and health education for underprivileged communities.
+      </div>
+    </div>
+  </div>
+
+  <!-- Educational Programs -->
+  <div style="border-bottom: 1px solid #28a745;">
+    <button data-ui-tablist-tab style="width: 100%; padding: 15px; background-color: #d4edda; border: none; text-align: left; font-size: 18px; font-weight: bold; color: #155724; cursor: pointer;">📚 Educational Programs</button>
+    <div data-ui-tablist-tabpanel style="padding: 15px; display: none;">
+      <div style="font-size: 16px; color: #155724;">
+        Our education initiatives provide learning resources, scholarships, and mentorship to help children and young adults access quality education.
+      </div>
+    </div>
+  </div>
+
+  <!-- Donation Drives -->
+  <div>
+    <button data-ui-tablist-tab style="width: 100%; padding: 15px; background-color: #d4edda; border: none; text-align: left; font-size: 18px; font-weight: bold; color: #155724; cursor: pointer;">💸 Donation Drives</button>
+    <div data-ui-tablist-tabpanel style="padding: 15px; display: none;">
+      <div style="font-size: 16px; color: #155724;">
+        Join our donation drives to support our efforts in providing food, shelter, healthcare, and education to those in need.
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  const accordionButtons = document.querySelectorAll('[data-ui-tablist-tab]');
+  
+  accordionButtons.forEach(button => {
+    button.addEventListener('click', () => {
+      const panel = button.nextElementSibling;
+      const isOpen = panel.style.display === 'block';
+
+      document.querySelectorAll('[data-ui-tablist-tabpanel]').forEach(p => p.style.display = 'none');
+      
+      if (!isOpen) {
+        panel.style.display = 'block';
+      }
+    });
+  });
+</script>
+
 
 
 	<section class="ftco-section ftco-no-pt">
