--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-	<section class="row align-items-center py-1 px-xl-2" >
+	<section class="row align-items-center py-1 px-xl-2 fixed-top">
      <div class="col-lg-3">
        <a href="index.html" class="text-decoration-none">
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj1xnj8yHmS38UMOIhorLjeQjF2cX4tvndF7DHJH7pWscuE3dlA8xY1Tbk1ox2PoyZDOmkCwERtcuPtf0GeSn9j22Fye9cckelpP8-i7G4N909YRDXP4auyH5HQ7fgCkSfUtcdDzTRMMynjYDjA5Pqo18kpLRLySoFCxQYFZPCbDK0a_9HKRlp1I0E3XfvG/s1600/Capture-removebg-preview%20(1).png" alt="Logo" style="max-height: 40px; background-color: #f0f0f0; border: 1px solid #ccc;">
@@ -84,7 +84,7 @@
 </div>
 </section>
 
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light fixed-top" id="ftco-navbar">
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
   <div class="container">
     <a class="navbar-brand" href="#home">Unicare</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
